Add some Frontend Changes

--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -4,6 +4,16 @@
     format("truetype");
 }
 
+@font-face {
+  font-family: "BiteChocolate"; /* Replace with your font name */
+  src: url("./assets/fonts/BiteChocolate-2RGl.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand"; /* Replace with your font name */
+  src: url("./assets/fonts/Quicksand-VariableFont_wght.ttf") format("truetype");
+}
+
 input:focus {
   outline: none; /* Removes default outline */
   border: none; /* Removes border if needed */
