restaurant register and login

--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -18,3 +18,7 @@ input:focus {
   outline: none; /* Removes default outline */
   border: none; /* Removes border if needed */
 }
+
+body {
+  outline: 1px solid transparent; /* Transparent outline */
+}
