update: Updated UserLogin.jsx and Header.jsx with some common options.

--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -14,6 +14,15 @@
   src: url("./assets/fonts/Quicksand-VariableFont_wght.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Open-Sans"; /* Replace with your font name */
+  src: url("./assets/fonts/OpenSans-VariableFont_wght.ttf") format("truetype");
+}
+
+* {
+  font-family: "Open-Sans";
+}
+
 input:focus {
   outline: none; /* Removes default outline */
   border: none; /* Removes border if needed */
